<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/creditsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".CreditsActivity">

    <LinearLayout
        android:id="@+id/creditsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/creditsHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/credits_heading"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="35sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/thanksGeoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks_geoff"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/thanksAssistants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks_assistants"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/thanksPeers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks_peers"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/thanksPepe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks_pepe"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/feelsgoodman"
            android:contentDescription="@string/feels_good_man" />

        <Button
            android:id="@+id/backButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="256dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="back"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.723" />
    </LinearLayout>
</ScrollView>